# zenith-radar-os

./: .cursorrules  .gitignore  LICENSE  README.md
docs/: AXI_Stream_and_Zero_Copy_V3.md  Radar_Waveform_and_Signal_Processing.md  Zenith_Week1--Day1_Day2_FullLog.md  Zenith_Week1--Day1_Day2_FullLog_v2.md  Zenith_Week1_Day3_Day4_FullLog_v2.md  Zenith_Week1_HAL_Completion.md  Zenith_Week1_Master_Plan_V3.md  Zynq_HLS_Hardware_Constraints_V3.md  🛰️Project_Zenith_Radar_OS_V5.1.md
docs/decisions/: ADR-001-toolchain-version.md
hardware/block-design/: zenith_bd.xpr
hardware/block-design/zenith_bd.srcs/sources_1/bd/zenith_system/: zenith_system.bd  zenith_system.bda
zenith-core/include/zenith/common/: zenith_memory_map.hpp
zenith-silicon/: .peers.ini
zenith-silicon/cfar/: cfar.cpp  cfar.h  hls_build.tcl  main.cpp  radar_defines.h
zenith-silicon/cfar/_ide/: .peers.ini  version.ini  workspace_journal.py  workspace_journal_496.py
zenith-silicon/cfar/cfar/: compile_commands.json  hls_config.cfg  vitis-comp.json
zenith-silicon/cfar/cfar/cfar_core/: cfar_core.hlscompile_summary  vitis-comp.json
zenith-silicon/cfar/cfar/cfar_core/hls/: config.cmdline  hls_data.json
zenith-silicon/cfar/cfar/cfar_core/hls/impl/misc/drivers/cfar_core_v1_0/src/: CMakeLists.txt  Makefile  xcfar_core_hw.h  xcfar_core_linux.c
zenith-silicon/cfar/cfar/cfar_core/reports/: v++_compile_cfar_core_guidance.html
zenith-silicon/cfar/cfar/cfar_core/reports/.db/: v++_compile_cfar_core_guidance.pb3
zenith-silicon/cfar/hal/: axi_dma_controller.hpp  cfar_engine_controller.hpp
(+93 files in other folders)
